Fixed contrast issue in tokens

--- a/static/css/dark-variables.css
+++ b/static/css/dark-variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Tue, 05 Sep 2023 09:10:07 GMT
+ * Generated on Tue, 05 Sep 2023 10:04:33 GMT
  */
 
 :root {
@@ -12,7 +12,7 @@
   --top-gradient1-color: #7B5AC466;
   --primary-gradient: linear-gradient(-45deg, #A781F7 0%, #55CBAE 100%);
   --canvas-color: #19171A;
-  --interactive-color-hover: #368270;
+  --interactive-color-hover: #337B6A;
   --interactive-color: #55CBAE;
   --default-color: #F8F7F9;
 }
