--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Tue, 05 Sep 2023 09:10:07 GMT
+ * Generated on Tue, 05 Sep 2023 10:04:33 GMT
  */
 
 :root {
@@ -39,7 +39,7 @@
   --button-secondary-background-color-active: #1C3731;
   --button-secondary-background-color-hover: #225A4D;
   --button-secondary-background-color-focus: radial-gradient(#55CBAE, #225A4D);
-  --button-secondary-background-color: #368270;
+  --button-secondary-background-color: #337B6A;
   --button-border-radius: 4px;
   --button-label-letter-spacing: 0;
   --button-label-font-size: 1.2rem;
